<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editText"
        android:hint="@string/numeric_password"
        android:layout_marginTop="125dp"
        android:ems="10"
        android:inputType="numberPassword" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:layout_alignTop="@+id/editText"
        android:layout_marginTop="182dp"
        android:ems="10"
        android:inputType="phone" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/multiline_text"
        android:layout_alignTop="@+id/editText"
        android:layout_marginTop="241dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:lines="4"
        android:gravity="bottom"
        />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editText"
        android:layout_marginTop="385dp"
        android:ems="10"
        android:hint="@string/time"
        android:inputType="time" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editText"
        android:layout_marginTop="445dp"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editText"
        android:layout_marginTop="503dp"
        android:ems="10"
        android:hint="@string/number_signed"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editText"
        android:layout_marginTop="566dp"
        android:ems="10"
        android:hint="@string/number_decimal"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_alignTop="@+id/editText"
        android:layout_marginTop="62dp"
        android:ems="10"
        android:inputType="textEmailAddress" />
</RelativeLayout>